--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mobile Money PWA Prototype</title>
-    <meta name="description" content="Prototype PWA pour enregistrements de transactions Mobile Money" />
+  <title>MobiLedger</title>
+  <meta name="description" content="Le registre numérique du mobile money" />
     <meta name="theme-color" content="#2563eb" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
